--- a/blocks/show-image/__img/show-image__img.css
+++ b/blocks/show-image/__img/show-image__img.css
@@ -1,1 +1,4 @@
-.show-image__img {}
+.show-image__img {
+    width: 100%;
+    max-height: 75vh;
+}
