--- a/blocks/show-image/show-image.css
+++ b/blocks/show-image/show-image.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: 999;
     align-content: center;
     position: fixed;
